--- a/skeleton/style/style.css
+++ b/skeleton/style/style.css
@@ -1,3 +1,30 @@
+
+button {
+    
+    background-color: #4CAF50;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+}
+input[type="checkbox"]{
+     /* Double-sized Checkboxes */
+  -ms-transform: scale(2); /* IE */
+  -moz-transform: scale(2); /* FF */
+  -webkit-transform: scale(2); /* Safari and Chrome */
+  -o-transform: scale(2); /* Opera */
+  transform: scale(2);
+  padding: 10px;
+}
+
+
+
+
+
 .mainBody {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
@@ -87,3 +114,21 @@
     width: 220px;
 
 }
+
+ul li.checked {
+    background: teal;
+    color: white;
+    text-decoration: line-through;
+  }
+  ul li.checked::before {
+    content: '';
+    position: absolute;
+    border-color: #fff;
+    border-style: solid;
+    border-width: 0 2px 2px 0;
+    top: 10px;
+    left: 16px;
+    transform: rotate(45deg);
+    height: 15px;
+    width: 7px;
+  }
