--- a/skeleton/style/style.css
+++ b/skeleton/style/style.css
@@ -7,8 +7,6 @@
                         "Left Containter Right"
                         "Left Containter Right";
 
-
-                        
     grid-gap: 10px;
     margin: auto;
     height: 100vh;
@@ -38,9 +36,8 @@
     height: fit-content;
     width: 20vw;
     height: 88vh;
-    background: red;
+    background: salmon;
     color: aliceblue;
-    font-style: oblique;
     font-size: 20px;
     justify-self: center;
     font-weight: bold;
@@ -51,14 +48,7 @@
 
 .Right-Side {
     grid-area: Right;
-    height: fit-content;
-    width: 40%;
-    height: 80vh;
-    background:lightgray;
-    color: aliceblue;
     user-select: none;
-    border-style: dashed;
-    padding-left: 30px;
     justify-self: center;
     
 }
@@ -66,17 +56,29 @@
 
 .Left-Side {
     grid-area: Left;
-    height: fit-content;
-    width: 40%;
-    height: 80vh;
+
     background: lightgray;
     color: aliceblue;
     justify-self: center;
     user-select: none;
-    border-style: dashed;
-    padding-left: 30px;
-    
 }
+
+.Right-Side img {
+    height: 300px;
+    width: 300px;
+    padding-top: 450px;
+
+}
+
+.Left-Side img {
+    height: 300px;
+    width: 300px;
+    padding-top: 420px
+
+}
+
+
+
 #AnimalLabel {
     padding-left: 45px;
 } 
@@ -87,3 +89,84 @@
     width: 220px;
 
 }
+
+
+button {
+    
+    color: #20bf6b !important;
+    text-transform: uppercase;
+    background: #ffffff;
+    padding: 20px;
+    border: 4px solid #20bf6b !important;
+    border-radius: 6px;
+    display: inline-block;
+    transition: all 0.3s ease 0s;
+    margin-top: 20px;
+    margin-left: 10px;
+
+    
+}
+
+button:hover {
+    color: #494949 !important;
+    border-radius: 50px;
+    border-color: turquoise !important;
+    transition: all 0.3s ease 0s;
+    }
+
+
+
+
+
+input[type="checkbox"]{
+     /* Double-sized Checkboxes */
+  -ms-transform: scale(2); /* IE */
+  -moz-transform: scale(2); /* FF */
+  -webkit-transform: scale(2); /* Safari and Chrome */
+  -o-transform: scale(2); /* Opera */
+  transform: scale(2);
+  padding: 10px;
+  margin-left: 20px;
+}
+
+
+
+
+
+ul li.checked {
+    background: teal;
+    color: white;
+    text-decoration: line-through;
+  }
+  ul li.checked::before {
+    content: '';
+    position: absolute;
+    border-color: #fff;
+    border-style: solid;
+    border-width: 0 2px 2px 0;
+    top: 10px;
+    left: 16px;
+    transform: rotate(45deg);
+    height: 15px;
+    width: 7px;
+  }
+
+
+  #AddButton {
+    color: #494949 !important;
+    text-transform: uppercase;
+    text-decoration: none;
+    background: #ffffff;
+    padding: 5px;
+    border: 4px solid turquoise !important;
+    display: inline-block;
+    transition: all 0.4s ease 0s;
+    
+  }
+
+  #AddButton:hover {
+    color: #ffffff !important;
+    background: #f6b93b;
+    border-color: #f6b93b !important;
+    transition: all 0.4s ease 0s;
+    }
