--- a/skeleton/style/style.css
+++ b/skeleton/style/style.css
@@ -8,7 +8,6 @@
                         "Left Containter Right";
 
     grid-gap: 10px;
-    margin: auto;
     height: 100vh;
     width: 90vw;
     background: lightgray;
@@ -46,6 +45,10 @@
     
 }
 
+p {
+    padding-left:90px;  
+}
+
 
 .Right-Side {
     grid-area: Right;
@@ -67,14 +70,15 @@
 .Right-Side img {
     height: 300px;
     width: 300px;
-    padding-top: 450px;
+    padding-top: 40px;
 
 }
 
 .Left-Side img {
     height: 300px;
     width: 300px;
-    padding-top: 420px
+    padding-top: 40px;
+    padding-left: 10px;
 
 }
 
@@ -87,32 +91,31 @@
 #Animalinput {
     margin-left: 25px;
     margin-top: 10px;
-    width: 220px;
-
+    
 }
 
 
 button {
     
-    color: #20bf6b !important;
+    color: teal !important;
     text-transform: uppercase;
     background: #ffffff;
     padding: 20px;
-    border: 4px solid #20bf6b !important;
+    border: 4px solid teal !important;
     border-radius: 6px;
     display: inline-block;
     transition: all 0.3s ease 0s;
     margin-top: 20px;
     margin-left: 10px;
-    font-family: Georgia;
+
 
     
 }
 
 button:hover {
-    color: turquoise !important;
+    color: yellowgreen !important;
     border-radius: 50px;
-    border-color: turquoise !important;
+    border-color: yellowgreen !important;
     transition: all 0.3s ease 0s;
     }
 
