--- a/skeleton/style/style.css
+++ b/skeleton/style/style.css
@@ -1,30 +1,3 @@
-
-button {
-    
-    background-color: #4CAF50;
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
-}
-input[type="checkbox"]{
-     /* Double-sized Checkboxes */
-  -ms-transform: scale(2); /* IE */
-  -moz-transform: scale(2); /* FF */
-  -webkit-transform: scale(2); /* Safari and Chrome */
-  -o-transform: scale(2); /* Opera */
-  transform: scale(2);
-  padding: 10px;
-}
-
-
-
-
-
 .mainBody {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
@@ -34,10 +7,7 @@ input[type="checkbox"]{
                         "Left Containter Right"
                         "Left Containter Right";
 
-
-                        
     grid-gap: 10px;
-    margin: auto;
     height: 100vh;
     width: 90vw;
     background: lightgray;
@@ -65,27 +35,24 @@ input[type="checkbox"]{
     height: fit-content;
     width: 20vw;
     height: 88vh;
-    background: red;
+    background: salmon;
     color: aliceblue;
-    font-style: oblique;
     font-size: 20px;
     justify-self: center;
     font-weight: bold;
     user-select: none;
     border-radius:50px;
+    
+}
+
+p {
+    padding-left:90px;  
 }
 
 
 .Right-Side {
     grid-area: Right;
-    height: fit-content;
-    width: 40%;
-    height: 80vh;
-    background:lightgray;
-    color: aliceblue;
     user-select: none;
-    border-style: dashed;
-    padding-left: 30px;
     justify-self: center;
     
 }
@@ -93,17 +60,30 @@ input[type="checkbox"]{
 
 .Left-Side {
     grid-area: Left;
-    height: fit-content;
-    width: 40%;
-    height: 80vh;
+
     background: lightgray;
     color: aliceblue;
     justify-self: center;
     user-select: none;
-    border-style: dashed;
-    padding-left: 30px;
-    
 }
+
+.Right-Side img {
+    height: 300px;
+    width: 300px;
+    padding-top: 40px;
+
+}
+
+.Left-Side img {
+    height: 300px;
+    width: 300px;
+    padding-top: 40px;
+    padding-left: 10px;
+
+}
+
+
+
 #AnimalLabel {
     padding-left: 45px;
 } 
@@ -111,9 +91,49 @@ input[type="checkbox"]{
 #Animalinput {
     margin-left: 25px;
     margin-top: 10px;
-    width: 220px;
-
+    
 }
+
+
+button {
+    
+    color: teal !important;
+    text-transform: uppercase;
+    background: #ffffff;
+    padding: 20px;
+    border: 4px solid teal !important;
+    border-radius: 6px;
+    display: inline-block;
+    transition: all 0.3s ease 0s;
+    margin-top: 20px;
+    margin-left: 10px;
+
+
+    
+}
+
+button:hover {
+    color: yellowgreen !important;
+    border-radius: 50px;
+    border-color: yellowgreen !important;
+    transition: all 0.3s ease 0s;
+    }
+
+
+
+
+
+input[type="checkbox"]{
+     /* Double-sized Checkboxes */
+  -ms-transform: scale(2); /* IE */
+  -moz-transform: scale(2); /* FF */
+  -webkit-transform: scale(2); /* Safari and Chrome */
+  -o-transform: scale(2); /* Opera */
+  transform: scale(2);
+  padding: 10px;
+  margin-left: 20px;
+}
+
 
 ul li.checked {
     background: teal;
@@ -132,3 +152,23 @@ ul li.checked {
     height: 15px;
     width: 7px;
   }
+
+
+  #AddButton {
+    color: #494949 !important;
+    text-transform: uppercase;
+    text-decoration: none;
+    background: #ffffff;
+    padding: 5px;
+    border: 4px solid turquoise !important;
+    display: inline-block;
+    transition: all 0.4s ease 0s;
+    
+  }
+
+  #AddButton:hover {
+    color: #ffffff !important;
+    background: #f6b93b;
+    border-color: #f6b93b !important;
+    transition: all 0.4s ease 0s;
+    }
